# wesldoc

./: Cargo.toml  README.md  index.html
-/static/css/: icons.css  styles.css  themes.css
-/static/js/: lineNumbers.js  search.js  selectVersion.js  settings.js  theme.js
.github/workflows/: ci.yml  pages.yml
crates/make/: Cargo.toml
crates/make/src/: lib.rs  main.rs  package.rs  resolver.rs
crates/wesl_docs/: Cargo.toml
crates/wesl_docs/src/: lib.rs
crates/wesl_docs_compiler/: Cargo.toml
crates/wesl_docs_compiler/src/: build_attributes.rs  build_conditional.rs  build_doc_comment.rs  build_expression.rs  build_type.rs  calculate_span.rs  collect_features.rs  context.rs  docs_ext.rs  extract_comments.rs  lib.rs  map.rs  post_process.rs  source_map.rs
crates/wesl_docs_generator/: Cargo.toml
crates/wesl_docs_generator/src/: all_items.rs  lib.rs
crates/wesl_docs_generator/static/: styles.css
crates/wesl_docs_generator/static/css/: styles.css  themes.css
crates/wesl_docs_generator/static/js/: lineNumbers.js  search.js
crates/wesl_docs_generator/templates/: base.html  constant.html  function.html  global_variable.html  index.html  override.html  overview.html  render_attribute.html  render_expression.html  render_type.html  source.html  struct.html  type_alias.html
crates/wesldoc/: Cargo.toml
crates/wesldoc/examples/: build_examples.rs
crates/wesldoc/src/: lib.rs  main.rs  resolver.rs  wesl_toml.rs
crates/wesldoc_ast/: Cargo.toml
crates/wesldoc_ast/src/: lib.rs
crates/wesldoc_compiler/: Cargo.toml
crates/wesldoc_compiler/src/: build_attributes.rs  build_conditional.rs  build_doc_comment.rs  build_expression.rs  build_type.rs  calculate_span.rs  collect_features.rs  context.rs  extract_comments.rs  lib.rs  map.rs  post_process.rs
crates/wesldoc_generator/: Cargo.toml
crates/wesldoc_generator/src/: all_items.rs  context.rs  index.rs  lib.rs  render.rs  static_files.rs
crates/wesldoc_generator/static/css/: styles.css  themes.css
crates/wesldoc_generator/static/css/source_code_pro/: source_code_pro.css
crates/wesldoc_generator/static/js/: theme.js
crates/wesldoc_generator/templates/: base.html  constant.html  function.html  global_variable.html  index.html  override.html  overview.html  render_attribute.html  render_expression.html  render_type.html  settings.html  source.html  struct.html  type_alias.html
example_packages/math_utils/: Cargo.toml  constants.wesl  curves.wesl  volume.wesl  wesl.toml
example_packages/math_utils/shaders/: c2.wesl  constants.wesl  volume.wesl
example_packages/pbr/: Cargo.toml  fog.wesl  fullscreen.wesl  types.wesl  wesl.toml
example_packages/pbr/mesh/: bindings.wesl  types.wesl
example_packages/pbr/shaders/: bindings.wesl  fog.wesl  fragment.wesl  overrides.wesl  types.wesl
example_packages/primitives/: Cargo.toml  constants.wesl  cuboid.wesl  cylinder.wesl  wesl.toml
example_packages/primitives/shaders/: cuboid.wesl
math_utils/: common.js
math_utils/0.0.0/: items.js
math_utils/0.0.0/math_utils/: index.html
math_utils/0.0.0/math_utils/c2/: const.P.html  index.html
math_utils/0.0.0/math_utils/constants/: alias.IVec3.html  alias.SomeArray.html  alias.SomeDynamicArray.html  alias.SomeType.html  const.E.html  const.FRAC_PI_3.html  const.HALF_PI.html  const.MY_PI.html  const.MY_PI_PARENTHESES.html  const.PI.html  const.PI_2.html  index.html  type.IVec3.html  type.SomeArray.html  type.SomeDynamicArray.html  type.SomeType.html
math_utils/0.0.0/math_utils/curves/: fn.ease_in_cubic.html  fn.ease_in_quadratic.html  fn.ease_in_sine.html  index.html
math_utils/0.0.0/math_utils/volume/: fn.cuboid_volume.html  fn.cylinder_volume.html  index.html
math_utils/0.0.0/src/math_utils/: c2.html  constants.html  curves.html  volume.html
math_utils/latest/: items.js
math_utils/latest/math_utils/: index.html  items.js
math_utils/latest/math_utils/c2/: const.P.html  index.html
math_utils/latest/math_utils/constants/: alias.IVec3.html  alias.SomeArray.html  alias.SomeDynamicArray.html  alias.SomeType.html  const.E.html  const.FRAC_PI_3.html  const.HALF_PI.html  const.MY_PI.html  const.MY_PI_PARENTHESES.html  const.PI.html  const.PI_2.html  index.html  type.IVec3.html  type.SomeArray.html  type.SomeDynamicArray.html  type.SomeType.html
math_utils/latest/math_utils/curves/: fn.ease_in_cubic.html  fn.ease_in_quadratic.html  fn.ease_in_sine.html  index.html
math_utils/latest/math_utils/volume/: fn.cuboid_volume.html  fn.cylinder_volume.html  index.html
math_utils/latest/src/math_utils/: c2.html  constants.html  curves.html  volume.html
pbr/0.0.0/: items.js
pbr/0.0.0/pbr/: index.html  items.js
pbr/0.0.0/pbr/bindings/: index.html  var.material.html
pbr/0.0.0/pbr/fog/: const.FOG_PI.html  fn.linear_fog.html  index.html  struct.Fog.html
pbr/0.0.0/pbr/fragment/: fn.fragment.html  index.html  struct.FragmentInput.html
pbr/0.0.0/pbr/fullscreen/: fn.fullscreen_vertex_shader.html  index.html  (+1 more)
pbr/latest/pbr/: index.html  items.js
primitives/0.0.0/: items.js
primitives/0.0.0/primitives/: index.html
primitives/latest/: items.js
primitives/latest/primitives/: index.html
(+92 files in other folders)
