[workspace]
resolver = "2"
members = ["crates/*"]
# TODO: Use glob when supported (https://github.com/rust-lang/cargo/issues/6009)
exclude = [
    "example_packages/math_utils",
    "example_packages/pbr",
    "example_packages/primitives",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "WESL documentation generator"
repository = "https://github.com/jannik4/wesldoc"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "d2aeee07eb56408f5ab4d99feaa7f2b79d9e2efc" }
