[workspace]
resolver = "2"
members = ["crates/*"]
# TODO: Use glob when supported (https://github.com/rust-lang/cargo/issues/6009)
exclude = [
    "example_packages/math_utils",
    "example_packages/pbr",
    "example_packages/primitives",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "WESL documentation generator"
repository = "https://github.com/jannik4/wesldoc"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
wesl = { git = "https://github.com/jannik4/wesl-rs", rev = "202257f4bdecc00f186ba5cf721cedc368703c7f" }
