[workspace]
resolver = "2"
members = ["crates/*"]
# TODO: Use glob when supported (https://github.com/rust-lang/cargo/issues/6009)
exclude = [
    "example_packages/math_utils",
    "example_packages/pbr",
    "example_packages/primitives",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "WESL documentation generator"
repository = "https://github.com/jannik4/wesldoc"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "9e510a38f6f9d6834f00803f8fead72b4a7707bb" }
