[package]
name = "make"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
wesl_docs = { path = "../wesl_docs" }
wesl_docs_compiler = { path = "../wesl_docs_compiler" }
wesl_docs_generator = { path = "../wesl_docs_generator" }

wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "ff538850b5e589784ee4fb9c69938ce67d3707d4" }
env_logger = "0.11.8"
