[package]
name = "make"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
wesldoc_ast = { path = "../wesldoc_ast" }
wesldoc_compiler = { path = "../wesldoc_compiler" }
wesldoc_generator = { path = "../wesldoc_generator" }

wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "ff538850b5e589784ee4fb9c69938ce67d3707d4" }
env_logger = "0.11.8"
