[package]
name = "wesldoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wesldoc_ast = { path = "../wesldoc_ast" }
wesldoc_compiler = { path = "../wesldoc_compiler" }
wesldoc_generator = { path = "../wesldoc_generator" }

wesl = { workspace = true }
env_logger = "0.11.8"
clap = { version = "4.5.36", features = ["derive"] }
