[package]
name = "wesldoc_compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wesldoc_ast = { path = "../wesldoc_ast" }

wesl = { workspace = true }
log = "0.4.27"
