[package]
name = "wesldoc_generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
wesldoc_ast = { path = "../wesldoc_ast" }
askama = "0.13.0"
include_dir = "0.7.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ammonia = "4.0.0"
